package com.hqbhoho.bigdata.design.pattern.decorator;

/**
 * describe:
 *
 * @author hqbhoho
 * @version [v1.0]
 * @date 2019/12/03
 */
public class HWPhone extends AbstractPhone {
    public HWPhone(Double price){
        super("HuaWei Phone",price);
    }
}
