package com.hqbhoho.bigdata.design.pattern.decorator;

public interface Phone {
    String getDetails();
    double getPrice();
}
