package com.hqbhoho.bigdata.design.pattern.decorator;

/**
 * describe:
 *
 * @author hqbhoho
 * @version [v1.0]
 * @date 2019/12/03
 */
public class XMPhone extends AbstractPhone{
    public XMPhone(Double price){
        super("XiaoMi Phone",price);
    }
}
